force-app/main/default/objects/cgcloud__Condition_Template__c/cgcloud__Condition_Template__c.object-meta.xml
<CustomObject>
    <description>The use case holds the details of the condition template object.</description>
    <label>Condition Template</label>
    <nameField>
        <label>Condition Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condition Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>