force-app/main/default/objects/cgcloud__Condition_Template__c/fields/cgcloud__Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Customer_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Describes, whether there exists a account reference for the conditions of this template.</description>
    <label>Customer Reference</label>
    <type>Checkbox</type>
</CustomField>