force-app/main/default/objects/cgcloud__Condition_Template__c/fields/cgcloud__Price_Finding_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price_Finding_Id__c</fullName>
    <description>Id used in the code (e.g. Product Price or Consumer Price,…)</description>
    <label>Price Finding Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>