force-app/main/default/objects/cgcloud__Condition_Template__c/fields/cgcloud__Product_Reference__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Describes, whether there exists a product reference for the conditions of this template.</description>
    <label>Product Reference</label>
    <type>Checkbox</type>
</CustomField>