force-app/main/default/objects/cgcloud__Condition_Template__c/fields/cgcloud__Template_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_Type__c</fullName>
    <description>The attribute is used to group conditions.</description>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>