force-app/main/default/objects/cgcloud__Condition_Template__c/fields/cgcloud__Value_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Value_Type__c</fullName>
    <description>Type of the condition value.</description>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>