force-app/main/default/objects/cgcloud__Condition_Template__c/validationRules/cgcloud__Check_If_Sales_Org_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Sales_Org_Is_Changed</fullName>
    <active>true</active>
    <description>The Sales Org can&apos;t be edited after Condition Template creation.</description>
    <errorConditionFormula>AND(ISCHANGED(cgcloud__Sales_Org__c) , NOT(ISBLANK(PRIORVALUE(cgcloud__Sales_Org__c))))</errorConditionFormula>
    <errorMessage>The Sales Org can&apos;t be edited after Condition Template creation.</errorMessage>
</ValidationRule>